# TestTelegramEngineSharedLibCpp11

./: CMakeLists.txt  main.cpp
